Sample Google sheets connector
