# controllers/UserProvisioning.js
@@ -3,12 +3,16 @@
 var utils = require('../utils/writer.js');
 var UserProvisioning = require('../service/UserProvisioningService');
 
-module.exports.apiV1UpdateUserUserNamePATCH = function apiV1UpdateUserUserNamePATCH (req, res, next, body, userName) {
-  UserProvisioning.apiV1UpdateUserUserNamePATCH(body, userName)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
+module.exports.patchUpdateUser = async function patchUpdateUser (req, res, next, body, userName) {
+  
+    try {
+        // Call the async function and wait for its result
+        const response = await UserProvisioning.patchUpdateUser(body, userName);
+
+        // Write the JSON response
+        utils.writeJson(res, response);
+    } catch (error) {
+        // If an error occurs, write the error response
+        utils.writeJson(res, { error: error.message }, 500); // Assuming 500 is the appropriate HTTP status code for internal server error
+    }
 };
